--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 <h1 style="text-align: center; font-size:100%">
-<img src="C:\Users\Dell\Downloads\fb.png"; width="40px">
+<img src="fb.png"; width="40px">
 <a href="https://www.facebook.com/deaneisabel.baro/"; target="_blank">Facebook Profile</a>
-<img src="C:\Users\Dell\Downloads\gmail.png"; width="40px" >
+<img src="gmail.png"; width="40px" >
 <a>gggghfrsshj7yf6rf@gmail.com</a>
-<img src="C:\Users\Dell\Downloads\call.png"; width="40px" >
+<img src="call.png"; width="40px" >
 <a>09560457921</a>
 </h1>
 
